# stars-web

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INVENTORY.md  README.md  apply_labels.ps1  pyproject.toml  start.bat  start.ps1
.githooks/: pre-commit
.github/: INVENTORY.md  copilot-instructions.md
.github/workflows/: ci.yml
docs/: DEPENDENCIES.md  INVENTORY.md  file-format-discovery.md  x1-order-file-format.md
docs/images/: INVENTORY.md
docs/images/original_fat_client_screenshots/: Game.h1  Game.h2  Game.hst  Game.m1  Game.m2  Game.xy  INVENTORY.md
docs/llm/: INVENTORY.md  PORT_MANAGEMENT_GUIDE.md  TIER1_PROGRESS.md  TIER1_PROGRESS_EVENT_COMPLETE.md  TIER1_PROGRESS_SUMMARY.md  TIER1_PROGRESS_UPDATED.md  WORK_SUMMARY_OBJECT.md  WORK_SUMMARY_TURNMESSAGE.md  onboarding.md
scripts/: INVENTORY.md  qa_gate.ps1  setup-dev.ps1  setup-dev.sh
src/stars_web/: INVENTORY.md  app.py  block_reader.py  changelog.json  decryptor.py  domain_constants.py  file_header.py  game_state.py  lifecycle.py  order_serializer.py  pending_orders.py  planet_names.py  port_manager.py  run.py  serializers.py  stars_random.py  stars_string.py  status.py  turn_service.py  web_builder.py
src/stars_web/automation/: INVENTORY.md  __init__.py  commander.py  cross_verify.py  harness.py  host_runner.py  input.py  launcher.py  matcher.py  (+3 more)
tests/: INVENTORY.md  conftest.py  test_app.py  test_automation.py  test_battle_plan.py  test_battle_record.py  test_binary_player_race.py  test_block_reader.py  test_decryptor.py  test_design_block.py  test_e2e.py  test_event.py  test_file_footer.py  test_file_header.py  test_fleet.py  test_fleet_order.py  test_game_object.py  test_game_state.py  test_integration.py  test_lifecycle.py  test_order_serializer.py  test_planet.py  test_player_race.py  test_player_scores.py  test_port_manager.py  test_production_queue.py  test_production_queues.py  test_run.py  test_ship_design.py  test_ship_designs.py  test_stars_random.py  test_status.py  test_turn_message.py  test_waypoint_task.py  test_waypoints.py  test_web_builder.py
tools/: INVENTORY.md  analyze_message_blocks.py  check_inventory.py  tools_dump_blocks.py
(+25 files in other folders)
